--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree",
-  "author": ""Tomasz Ducin <tomasz.ducin@gmail.com>"",
+  "author": "Tomasz Ducin <tomasz.ducin@gmail.com>",
   "homepage": "https://github.com/tkoomzaaskz/tree",
   "filename": "tree.js",
   "version": "0.1.1",
