--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
 language: node_js
-node_js:
-  - "0.8"
-  - "0.10"
-before_script:
-  - npm install -g grunt-cli
-script:
-  - grunt
+node_js: "0.10"
+before_install: npm install -g grunt-cli bower
+install: npm install
+before_script: bower install
 notifications:
-  recipients:
-    - tkoomzaaskz@o2.pl
   email:
     on_success: change
     on_failure: always
