--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-qunit": "~0.2.2",
+    "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "~0.2.2"
   },
   "repository": {
