--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tree",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/tkoomzaaskz/tree",
   "authors": [
     "Tomasz Ducin <tomasz.ducin@gmail.com>"
@@ -14,10 +14,10 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
+    "Gruntfile.js",
     "node_modules",
     "bower_components",
-    "test",
-    "tests"
+    "test"
   ],
   "devDependencies": {
     "underscore": "~1.7.0",
