--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tree",
   "author": "Tomasz Ducin <tomasz.ducin@gmail.com>",
   "homepage": "https://github.com/tkoomzaaskz/tree",
-  "filename": "tree.js",
-  "version": "0.1.1",
+  "filename": "src/tree.js",
+  "version": "0.1.2",
   "description": "Provides basic tree structure for JavaScript",
   "license": "MIT",
   "readmeFilename": "README.md",
@@ -11,13 +11,16 @@
     "test": "test"
   },
   "dependencies": {
-    "underscore": "~1.4.x"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-qunit": "^0.5.2",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "^0.5.1",
+    "underscore": "^1.7.0"
+  },
+  "scripts": {
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
